<resources>
    <string name="app_name">novele</string>
    <string name="title_novel_update">Update</string>
    <string name="title_novel_populer">Novel Populer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_cover_novel">Cover Novel</string>
    <string name="chapter">Chapter %d</string>
    <string name="jam">%d jam</string>
    <string name="hint_search">Cari novel kesukaanmu…</string>
    <string name="cd_ic_search">Search Icon</string>
    <string name="cd_ic_cancel_search">Cancel Search Icon</string>
    <string name="cd_ic_filter_search">Filter Search Icon</string>
    <string name="cd_ic_more_vertical_icon">More Vertical</string>
    <string name="title_library_fragment">Library</string>
    <string name="title_favorit_fragment">Favorit</string>
    <string name="title_profile_fragment">Profile</string>
    <string name="title_home_fragment">Home</string>
    <string name="title_history_fragment">History</string>
    <string name="title_detail_activity">Detail</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Password must be >0 characters</string>
    <string name="invalid_password">Password must be >0 characters</string>
    <string name="invalid_email">Not a valid Email</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"register failed"</string>

    <string name="title_diary_fragment">Diary</string>
    <string name="textViewJudulKaryaku">Karyaku</string>
    <string name="lihat_semua">Lihat semua</string>

</resources>