<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.library.LibraryFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchContainer"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewSearchLibraryIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:clickable="true"
                android:contentDescription="@string/cd_ic_search"
                android:focusable="true"
                android:src="@drawable/ic_baseline_search_24"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imageViewFilterLibrarySearchIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewCancelLibrarySearchIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:clickable="true"
                android:contentDescription="@string/cd_ic_cancel_search"
                android:focusable="true"
                android:src="@drawable/ic_baseline_cancel_24"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewFilterLibrarySearchIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:clickable="true"
                android:contentDescription="@string/cd_ic_filter_search"
                android:focusable="true"
                android:src="@drawable/ic_baseline_filter_list_24"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imageViewMoreLibraryVerticalIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewMoreLibraryVerticalIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:clickable="true"
                android:contentDescription="@string/cd_ic_more_vertical_icon"
                android:focusable="true"
                android:src="@drawable/ic_baseline_more_vert_24"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textViewHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_library_fragment"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextSearchInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/hint_search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imageViewCancelLibrarySearchIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewNovelLibrary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>