<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:contentDescription="gambar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textViewHeadingLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

        <TextView
            android:id="@+id/textViewSubHeadingLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="blalbaalalvalavla"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHeadingLogin" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textAlignment="textStart"
            android:layout_marginTop="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSubHeadingLogin" />


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_edittext_login_register"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textAlignment="textStart"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />


        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_edittext_login_register"
            android:hint="Username"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />

        <TextView
            android:id="@+id/textViewTanggalLahir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Tanggal Lahir"
            android:textAlignment="textStart"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />


        <EditText
            android:id="@+id/editTextTanggalLahir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_edittext_login_register"
            android:hint="DD/MM/YYYY"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="date"
            android:focusable="false"
            android:cursorVisible="false"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTanggalLahir" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textAlignment="textStart"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTanggalLahir" />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_edittext_login_register"
            android:hint="Konfirmasi Password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />

        <TextView
            android:id="@+id/textViewKonfirmasiPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textAlignment="textStart"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


        <EditText
            android:id="@+id/editTextKonfirmasiPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_edittext_login_register"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewKonfirmasiPassword" />

        <LinearLayout
            android:id="@+id/linearLayoutKeteranganPersetujuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextKonfirmasiPassword">

            <CheckBox
                android:id="@+id/checkBoxPersetujuanRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/textViewKeteranganPersetujuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="Saya menyetujui persyaratan dan ketentuan yang telah di buat" />
        </LinearLayout>


        <Button
            android:id="@+id/buttonDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="25dp"
            android:enabled="false"
            android:text="Daftar"
            android:textColor="@color/white"
            android:background="@drawable/bg_rounded_button_solid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutKeteranganPersetujuan"/>

        <Button
            android:id="@+id/buttonKembali"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="Kembali"
            android:textColor="@color/black"
            android:background="@drawable/bg_rounded_edittext_login_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonDaftar"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonKembali"
            app:layout_constraintStart_toStartOf="@+id/buttonKembali"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>